# CT-Reconstruction

./: .gitignore  CMakeLists.txt  README.md
data/: phantom.pgm  result.pgm  sinogram.pgm
include/: filtering.h  phantom.h  projection.h  reconstruction.h
results/: index.html
scripts/: run.sh  setup.sh  test.sh
src/: filtering.cpp  main.cpp  phantom.cpp  projection.cpp  reconstruction.cpp
